# assembler-crates

./: .gitignore  .gitmodules  Cargo.toml  README.md  Taskfile.yaml
.cargo/: config.toml
.gitea/workflows/: auto_sync.yaml  code_cov.yaml
