[workspace]
members = ["assembler", "assembler_lib"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"
authors = ["Steven Becker <steven.becker@studium.uni-hamburg.de>", "Jan Julius <jan.julius@studium.uni-hamburg.de>"]
publish = ["mafiasi-gitea"]

[workspace.dependencies]
# Internal crates
assembler_lib = { path = "assembler_lib", version = "1.3.0", registry = "mafiasi-gitea" }

# External crates
nom = "7.1.3"
clap = { version = "4.4.8", features = ["cargo"] }
indicatif = "0.17.7"
indicatif-log-bridge = "0.2.2"
console = { version = "0.15", default-features = false }
log = "0.4.20"
env_logger = "0.11.0"
smartstring = "1.0.1"
pyo3 = { version = "0.19.0", features = ["extension-module", "abi3-py38"] }
assert_cmd = "2.0.12"
predicates = "3.0.4"
assert_fs = "1.1.0"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
panic = "abort"

# [package.metadata.release]
# sign-commit = true
# sign-tag = true
# registry = "mafiasi-gitea"
# tag-name = "{{prefix}}{{version}}"
# pre-release-replacements = [
#   {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
#   {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
#   {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
#   {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
#   {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://git.mafiasi.de/Prj-MR/Assembler/compare/{{tag_name}}...HEAD", exactly=1},
# ]
# target = "x86_64-unknown-linux-gnu"

# [package.metadata.binstall]
# pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }.{ archive-format }"
# pkg-fmt = "bin"

# [package.metadata.binstall.signing]
# algorithm = "minisign"
# pubkey = "RWQ6OyUDGTMQlRVb+YQi+iU6m3qkoDFa3MdTKpwRMb4OpSy/5IOXbM8b"
# file = "{ url }.minisig"

[workspace.metadata.cross.target.aarch64-apple-darwin]
image = "ghcr.io/cross-rs/aarch64-apple-darwin-cross:local"
