[workspace]
members = ["assembler", "assembler_lib", "debugger"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"
authors = ["Steven Becker <steven.becker@studium.uni-hamburg.de>", "Jan Julius <jan.julius@studium.uni-hamburg.de>"]
publish = ["mafiasi-gitea"]

[workspace.dependencies]
# Internal crates
assembler_lib = { path = "assembler_lib", version = "2.1.0", registry = "mafiasi-gitea" }

# External crates
clap = { version = "4.4.8", features = ["cargo"] }
indicatif = "0.17.7"
indicatif-log-bridge = "0.2.2"
console = { version = "0.15", default-features = false }
log = "0.4.20"
env_logger = "0.11.0"
smartstring = "1.0.1"
pyo3 = { version = "0.19.0", features = ["extension-module", "abi3-py38"] }
assert_cmd = "2.0.12"
predicates = "3.0.4"
assert_fs = "1.1.0"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
panic = "abort"

[workspace.metadata.release]
sign-commit = true
sign-tag = true
registry = "mafiasi-gitea"
tag-name = "{{version}}"
target = "x86_64-unknown-linux-gnu"

# [package.metadata.binstall]
# pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }.{ archive-format }"
# pkg-fmt = "bin"

# [package.metadata.binstall.signing]
# algorithm = "minisign"
# pubkey = "RWQ6OyUDGTMQlRVb+YQi+iU6m3qkoDFa3MdTKpwRMb4OpSy/5IOXbM8b"
# file = "{ url }.minisig"
